force-app/main/default/objects/Location__c/fields/DoNotSendRatesToEProposal__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendRatesToEProposal__c</fullName>
    <description>Do not send rates to Cendyn eProposal if checked</description>
    <inlineHelpText>Do not send rates to Cendyn eProposal if checked</inlineHelpText>
    <label>Do Not Send Rates To EProposal</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>