force-app/main/default/objects/Location__c/fields/DoNotSendRatesToUpMail__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendRatesToUpMail__c</fullName>
    <description>Do not send rates to UpMail if checked</description>
    <inlineHelpText>Do not send rates to UpMail if checked</inlineHelpText>
    <label>Do Not Send Rates To Up Mail</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>