force-app/main/default/objects/Location__c/fields/DoubleUpchargeRate__c.field-meta.xml
<CustomField>
    <fullName>DoubleUpchargeRate__c</fullName>
    <description>Guestroom Details, use this upcharge to calculate double occupancy rate based on single occupancy rate</description>
    <inlineHelpText>Guestroom Details, use this upcharge to calculate double occupancy rate based on single occupancy rate</inlineHelpText>
    <label>Double Upcharge Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>