force-app/main/default/objects/Location__c/fields/DriveTimeToNearestAirport__c.field-meta.xml
<CustomField>
    <fullName>DriveTimeToNearestAirport__c</fullName>
    <description>Average drive time to the nearest airport in minutes.</description>
    <inlineHelpText>Average drive time to the nearest airport in minutes.</inlineHelpText>
    <label>Drive Time To Nearest Airport</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>