force-app/main/default/objects/Location__c/fields/EnableAutomaticMarkEventsDone__c.field-meta.xml
<CustomField>
    <fullName>EnableAutomaticMarkEventsDone__c</fullName>
    <description>If set to true a scheduled job runs once a day to check for booking events that meet criteria to automatically mark events as done</description>
    <inlineHelpText>If set to true a scheduled job runs once a day to check for booking events that meet criteria to automatically mark events as done</inlineHelpText>
    <label>Enable Automatic Mark Events Done</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>