force-app/main/default/objects/Location__c/fields/EnableAvailabilityIntegration__c.field-meta.xml
<CustomField>
    <fullName>EnableAvailabilityIntegration__c</fullName>
    <description>Checking this field enables availability integrations for this property.</description>
    <inlineHelpText>Checking this field enables availability integrations for this property.</inlineHelpText>
    <label>Enable Availability Integration</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>