force-app/main/default/objects/Location__c/fields/EnableBackdatingBookings__c.field-meta.xml
<CustomField>
    <fullName>EnableBackdatingBookings__c</fullName>
    <description>Enable or Disable backdating bookings for Location</description>
    <inlineHelpText>Enable or Disable backdating bookings for Location</inlineHelpText>
    <label>Enable Backdating Bookings</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>