force-app/main/default/objects/Location__c/fields/EnableDefaultOccupancyUpcharge__c.field-meta.xml
<CustomField>
    <fullName>EnableDefaultOccupancyUpcharge__c</fullName>
    <description>Guestroom Details, to enable or disable the auto default double, triple and quad occupancy rate from single occupancy rate</description>
    <inlineHelpText>Guestroom Details, to enable or disable the auto default double, triple and quad occupancy rate from single occupancy rate</inlineHelpText>
    <label>Enable Default Occupancy Upcharge</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>