force-app/main/default/objects/Location__c/fields/EnableDirectBookNotification__c.field-meta.xml
<CustomField>
    <fullName>EnableDirectBookNotification__c</fullName>
    <label>Enable Direct Book Notification</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>