force-app/main/default/objects/Location__c/fields/EnableEnhancedPackageManagement__c.field-meta.xml
<CustomField>
    <fullName>EnableEnhancedPackageManagement__c</fullName>
    <description>Checking this allows Bookings on this property to use enhanced Package functionality such as, allowing more than one Booking package to be associated with a Room Block.</description>
    <inlineHelpText>Checking this allows Bookings on this property to use enhanced Package functionality such as, allowing more than one Booking package to be associated with a Room Block.</inlineHelpText>
    <label>Enable Enhanced Package Management</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>