force-app/main/default/objects/Location__c/fields/EnableHospitalityDiagramming__c.field-meta.xml
<CustomField>
    <fullName>EnableHospitalityDiagramming__c</fullName>
    <description>When checked, access to Hospitality Diagramming booking event function room diagramming is enabled.</description>
    <inlineHelpText>When checked, access to Hospitality Diagramming booking event function room diagramming is enabled.</inlineHelpText>
    <label>Enable Hospitality Diagramming</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>