force-app/main/default/objects/Location__c/fields/EnableOptionEventNotifications__c.field-meta.xml
<CustomField>
    <fullName>EnableOptionEventNotifications__c</fullName>
    <description>If this is checked, it will notify booking and event owners who have option events that their function room option space has become available.</description>
    <inlineHelpText>If this is checked, it will notify booking and event owners who have option events that their function room option space has become available.</inlineHelpText>
    <label>Enable Option Event Notifications</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>