force-app/main/default/objects/Location__c/fields/EnableRoomBlockStatus__c.field-meta.xml
<CustomField>
    <fullName>EnableRoomBlockStatus__c</fullName>
    <description>Checking this field makes Room Block status editable.</description>
    <inlineHelpText>Checking this field makes Room Block status editable.</inlineHelpText>
    <label>Enable Room Block Status</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>