force-app/main/default/objects/Location__c/fields/EnhanceBookingMerge__c.field-meta.xml
<CustomField>
    <fullName>EnhanceBookingMerge__c</fullName>
    <description>Enable if your property wants to merge any of these Room Block fields in Guestroom tables: Housing Method, Billing Instructions, Incidentals Billing, Meal Plan Rate, Meal Plan Type, or Confidential Rate.</description>
    <inlineHelpText>Enable if your property wants to merge any of these Room Block fields in Guestroom tables: Housing Method, Billing Instructions, Incidentals Billing, Meal Plan Rate, Meal Plan Type, or Confidential Rate.</inlineHelpText>
    <label>Enhance Booking Merge</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>