force-app/main/default/objects/Location__c/fields/Evening24hrs__c.field-meta.xml
<CustomField>
    <fullName>Evening24hrs__c</fullName>
    <description>Evening time range using 24-hour foramt, e.g. \</description>
    <inlineHelpText>Evening time range using 24-hour foramt, e.g. \</inlineHelpText>
    <label>Evening24hrs</label>
    <length>12</length>
    <type>Text</type>
</CustomField>