force-app/main/default/objects/Location__c/fields/ExternalAvailabilityDeductStatus__c.field-meta.xml
<CustomField>
    <fullName>ExternalAvailabilityDeductStatus__c</fullName>
    <label>External Availability Deduct Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>