force-app/main/default/objects/Location__c/fields/ExtractedDate__c.field-meta.xml
<CustomField>
    <fullName>ExtractedDate__c</fullName>
    <description>System Field: Do not Use. This field indicates the date, property was extracted from the ORG.</description>
    <inlineHelpText>System Field: Do not Use. This field indicates the date, property was extracted from the ORG.</inlineHelpText>
    <label>Extracted Date</label>
    <type>Date</type>
</CustomField>