force-app/main/default/objects/Location__c/fields/FreezeCutoffDateatDefinite__c.field-meta.xml
<CustomField>
    <fullName>FreezeCutoffDateatDefinite__c</fullName>
    <description>When selected, changes to the arrival date will not automatically update the cutoff date for definite bookings and room blocks.</description>
    <inlineHelpText>When selected, changes to the arrival date will not automatically update the cutoff date for definite bookings and room blocks.</inlineHelpText>
    <label>Freeze Cutoff Dateat Definite</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>