force-app/main/default/objects/Location__c/fields/FullLicenses__c.field-meta.xml
<CustomField>
    <fullName>FullLicenses__c</fullName>
    <description>Number of Full Licenses</description>
    <inlineHelpText>Number of Full Licenses</inlineHelpText>
    <label>Full Licenses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>