force-app/main/default/objects/Location__c/fields/FullLicensesInUse__c.field-meta.xml
<CustomField>
    <fullName>FullLicensesInUse__c</fullName>
    <description>Number of Full Licenses In Use on this property.</description>
    <inlineHelpText>Number of Full Licenses In Use on this property.</inlineHelpText>
    <label>Full Licenses In Use</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>