force-app/main/default/objects/Location__c/fields/GratuityLabel__c.field-meta.xml
<CustomField>
    <fullName>GratuityLabel__c</fullName>
    <description>Gratuity label. VALUE OPTIONS ARE GENERATED BY DELPHI AND SHOULD NOT BE MODIFIED MANUALLY.</description>
    <inlineHelpText>Gratuity label. VALUE OPTIONS ARE GENERATED BY DELPHI AND SHOULD NOT BE MODIFIED MANUALLY.</inlineHelpText>
    <label>Gratuity Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>