force-app/main/default/objects/Location__c/fields/HideBookingsFromPortal__c.field-meta.xml
<CustomField>
    <fullName>HideBookingsFromPortal__c</fullName>
    <description>System Field: Do Not Use. When selected, bookings default to hidden from PlannerPortal.</description>
    <inlineHelpText>System Field: Do Not Use. When selected, bookings default to hidden from PlannerPortal.</inlineHelpText>
    <label>Hide Bookings From Portal</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>