force-app/main/default/objects/Location__c/fields/IPlanLocationid__c.field-meta.xml
<CustomField>
    <fullName>IPlanLocationid__c</fullName>
    <description>System Field: Do Not Use. 7 Digit Code For Property For iPlan</description>
    <inlineHelpText>System Field: Do Not Use. 7 Digit Code For Property For iPlan</inlineHelpText>
    <label>IPlan Locationid</label>
    <length>7</length>
    <type>Text</type>
</CustomField>