force-app/main/default/objects/Location__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Indicates whether the record is currently visible in lookups, indicating a valid selection. Inactive records may still exist and be referenced by existing records, but no new references can be made.</description>
    <inlineHelpText>Indicates whether the record is currently visible in lookups, indicating a valid selection. Inactive records may still exist and be referenced by existing records, but no new references can be made.</inlineHelpText>
    <label>Is Active</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>