force-app/main/default/objects/Location__c/fields/IsDelphiCore__c.field-meta.xml
<CustomField>
    <fullName>IsDelphiCore__c</fullName>
    <description>This flag indicates that the property is Delphi Core.</description>
    <inlineHelpText>This flag indicates that the property is Delphi Core.</inlineHelpText>
    <label>Is Delphi Core</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>