force-app/main/default/objects/Location__c/fields/IsLimitedService__c.field-meta.xml
<CustomField>
    <fullName>IsLimitedService__c</fullName>
    <description>This flag indicates that the property is Delphi Select.</description>
    <inlineHelpText>This flag indicates that the property is Delphi Select.</inlineHelpText>
    <label>Is Limited Service</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>