force-app/main/default/objects/Location__c/fields/IsPlannerPortalEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsPlannerPortalEnabled__c</fullName>
    <description>System Field: Do Not Use. When selected, property bookings can be shared with PlannerPortal users.</description>
    <inlineHelpText>System Field: Do Not Use. When selected, property bookings can be shared with PlannerPortal users.</inlineHelpText>
    <label>Is Planner Portal Enabled</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>