force-app/main/default/objects/Location__c/fields/IsPropertyIntegratedUpMail__c.field-meta.xml
<CustomField>
    <fullName>IsPropertyIntegratedUpMail__c</fullName>
    <description>UpMail Integration</description>
    <inlineHelpText>UpMail Integration</inlineHelpText>
    <label>Is Property Integrated Up Mail</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>