force-app/main/default/objects/Location__c/fields/isRemoveCancelledEventsFromBEOs__c.field-meta.xml
<CustomField>
    <fullName>isRemoveCancelledEventsFromBEOs__c</fullName>
    <description>When an event is cancelled it will automatically be removed from all existing Booking Documents on the booking.</description>
    <inlineHelpText>When an event is cancelled it will automatically be removed from all existing Booking Documents on the booking.</inlineHelpText>
    <label>is Remove Cancelled Events From BEOs</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>