force-app/main/default/objects/Location__c/fields/LicensesInUse__c.field-meta.xml
<CustomField>
    <fullName>LicensesInUse__c</fullName>
    <description>Number of Licenses in Use on this property (DEPRECATED)</description>
    <inlineHelpText>Number of Licenses in Use on this property (DEPRECATED)</inlineHelpText>
    <label>Licenses In Use</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>