force-app/main/default/objects/Location__c/fields/LimitedLicenses__c.field-meta.xml
<CustomField>
    <fullName>LimitedLicenses__c</fullName>
    <description>Number of Limited Licenses</description>
    <inlineHelpText>Number of Limited Licenses</inlineHelpText>
    <label>Limited Licenses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>