force-app/main/default/objects/Location__c/fields/LimitedLicensesInUse__c.field-meta.xml
<CustomField>
    <fullName>LimitedLicensesInUse__c</fullName>
    <description>Number of Limited Licenses in Use on this property.</description>
    <inlineHelpText>Number of Limited Licenses in Use on this property.</inlineHelpText>
    <label>Limited Licenses In Use</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>