force-app/main/default/objects/Location__c/fields/LocationCode__c.field-meta.xml
<CustomField>
    <fullName>LocationCode__c</fullName>
    <label>Location Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>