force-app/main/default/objects/Location__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>