force-app/main/default/objects/Location__c/fields/LSPropertyOverride__c.field-meta.xml
<CustomField>
    <fullName>LSPropertyOverride__c</fullName>
    <description>System Field: Do Not Use. DO NOT EDIT - This controls behavior of LS Property validation rules in context</description>
    <inlineHelpText>System Field: Do Not Use. DO NOT EDIT - This controls behavior of LS Property validation rules in context</inlineHelpText>
    <label>LSProperty Override</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>