force-app/main/default/objects/Location__c/fields/Lunch24hrs__c.field-meta.xml
<CustomField>
    <fullName>Lunch24hrs__c</fullName>
    <description>Lunch time range using 24-hour foramt, e.g. \</description>
    <inlineHelpText>Lunch time range using 24-hour foramt, e.g. \</inlineHelpText>
    <label>Lunch24hrs</label>
    <length>12</length>
    <type>Text</type>
</CustomField>