force-app/main/default/objects/Location__c/fields/ManagementAffliation__c.field-meta.xml
<CustomField>
    <fullName>ManagementAffliation__c</fullName>
    <description>The company that manages the hotel.</description>
    <inlineHelpText>The company that manages the hotel.</inlineHelpText>
    <label>Management Affliation</label>
    <length>60</length>
    <type>Text</type>
</CustomField>