force-app/main/default/objects/Location__c/fields/MarkEventsDoneAfterEventEndDate__c.field-meta.xml
<CustomField>
    <fullName>MarkEventsDoneAfterEventEndDate__c</fullName>
    <description>Used to determine the number of days after the event end date when the event will be automatically marked as done by the Automatic Mark Events Done job</description>
    <inlineHelpText>Used to determine the number of days after the event end date when the event will be automatically marked as done by the Automatic Mark Events Done job</inlineHelpText>
    <label>Mark Events Done After Event End Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>