force-app/main/default/objects/Location__c/fields/MarkEventsDoneBeforeEventStartDate__c.field-meta.xml
<CustomField>
    <fullName>MarkEventsDoneBeforeEventStartDate__c</fullName>
    <description>Used to determine the number of days before the event start date when the event will be automatically marked as done by the Automatic Mark Events Done job</description>
    <inlineHelpText>Used to determine the number of days before the event start date when the event will be automatically marked as done by the Automatic Mark Events Done job</inlineHelpText>
    <label>Mark Events Done Before Event Start Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>