force-app/main/default/objects/Location__c/fields/MarkPickupComplete__c.field-meta.xml
<CustomField>
    <fullName>MarkPickupComplete__c</fullName>
    <description>If set to true a scheduled job runs once a day to check for room blocks that meet criteria to be marked pickup complete.</description>
    <inlineHelpText>If set to true a scheduled job runs once a day to check for room blocks that meet criteria to be marked pickup complete.</inlineHelpText>
    <label>Mark Pickup Complete</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>