force-app/main/default/objects/Location__c/fields/MasterId__c.field-meta.xml
<CustomField>
    <fullName>MasterId__c</fullName>
    <description>System Field: Do Not Use. Newmarket Services master location ID.</description>
    <inlineHelpText>System Field: Do Not Use. Newmarket Services master location ID.</inlineHelpText>
    <label>Master Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>