force-app/main/default/objects/Location__c/fields/MetroArea__c.field-meta.xml
<CustomField>
    <fullName>MetroArea__c</fullName>
    <description>The metropolitan area containing the location.</description>
    <inlineHelpText>The metropolitan area containing the location.</inlineHelpText>
    <label>Metro Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>