force-app/main/default/objects/Location__c/fields/Morning24hrs__c.field-meta.xml
<CustomField>
    <fullName>Morning24hrs__c</fullName>
    <description>Morning time range using 24-hour foramt, e.g. \</description>
    <inlineHelpText>Morning time range using 24-hour foramt, e.g. \</inlineHelpText>
    <label>Morning24hrs</label>
    <length>12</length>
    <type>Text</type>
</CustomField>