force-app/main/default/objects/Location__c/fields/NearestAirportCode__c.field-meta.xml
<CustomField>
    <fullName>NearestAirportCode__c</fullName>
    <label>Nearest Airport Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>