force-app/main/default/objects/Location__c/fields/OwnershipAffiliation__c.field-meta.xml
<CustomField>
    <fullName>OwnershipAffiliation__c</fullName>
    <description>The company that owns the hotel.</description>
    <inlineHelpText>The company that owns the hotel.</inlineHelpText>
    <label>Ownership Affiliation</label>
    <length>60</length>
    <type>Text</type>
</CustomField>