force-app/main/default/objects/Location__c/fields/PmsIdEnforceUniquePast__c.field-meta.xml
<CustomField>
    <fullName>PmsIdEnforceUniquePast__c</fullName>
    <description>When selected, PMS ID/Group Code duplicate checks will include room blocks with end dates in the past.</description>
    <inlineHelpText>When selected, PMS ID/Group Code duplicate checks will include room blocks with end dates in the past.</inlineHelpText>
    <label>Pms Id Enforce Unique Past</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>