force-app/main/default/objects/Location__c/fields/PmsIdMaxLength__c.field-meta.xml
<CustomField>
    <fullName>PmsIdMaxLength__c</fullName>
    <label>Pms Id Max Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>