force-app/main/default/objects/Location__c/fields/PmsIdMinLength__c.field-meta.xml
<CustomField>
    <fullName>PmsIdMinLength__c</fullName>
    <label>Pms Id Min Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>