force-app/main/default/objects/Location__c/fields/PmsIdRequired__c.field-meta.xml
<CustomField>
    <fullName>PmsIdRequired__c</fullName>
    <label>Pms Id Required</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>