force-app/main/default/objects/Location__c/fields/PmsIdRequiredEO__c.field-meta.xml
<CustomField>
    <fullName>PmsIdRequiredEO__c</fullName>
    <label>Pms Id Required EO</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>