force-app/main/default/objects/Location__c/fields/PropertyCode__c.field-meta.xml
<CustomField>
    <fullName>PropertyCode__c</fullName>
    <description>The PMS system&apos;s identifier for the location.</description>
    <inlineHelpText>The PMS system&apos;s identifier for the location.</inlineHelpText>
    <label>Property Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>