force-app/main/default/objects/Location__c/fields/PropertyKey__c.field-meta.xml
<CustomField>
    <fullName>PropertyKey__c</fullName>
    <description>System Field: Do Not Use.</description>
    <inlineHelpText>System Field: Do Not Use.</inlineHelpText>
    <label>Property Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>