force-app/main/default/objects/Location__c/fields/QuadUpchargeRate__c.field-meta.xml
<CustomField>
    <fullName>QuadUpchargeRate__c</fullName>
    <description>Guestroom Details, use this upcharge to calculate quad occupancy rate based on single occupancy rate</description>
    <inlineHelpText>Guestroom Details, use this upcharge to calculate quad occupancy rate based on single occupancy rate</inlineHelpText>
    <label>Quad Upcharge Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>