force-app/main/default/objects/Location__c/fields/RestrictBookingMoveWithPickup__c.field-meta.xml
<CustomField>
    <fullName>RestrictBookingMoveWithPickup__c</fullName>
    <label>Restrict Booking Move With Pickup</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>