force-app/main/default/objects/Location__c/fields/RohAllowedStatuses__c.field-meta.xml
<CustomField>
    <fullName>RohAllowedStatuses__c</fullName>
    <description>PICKLIST OPTIONS ARE FIXED BY DELPHI.FDC: DO NOT MODIFY.</description>
    <inlineHelpText>PICKLIST OPTIONS ARE FIXED BY DELPHI.FDC: DO NOT MODIFY.</inlineHelpText>
    <label>Roh Allowed Statuses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>