force-app/main/default/objects/Location__c/fields/SalespersonName__c.field-meta.xml
<CustomField>
    <fullName>SalespersonName__c</fullName>
    <description>Name to use when signing automated response emails (e.g., Maria)</description>
    <label>Salesperson Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>