force-app/main/default/objects/Location__c/fields/SalespersonTitle__c.field-meta.xml
<CustomField>
    <fullName>SalespersonTitle__c</fullName>
    <description>Title to use in email signature (e.g., Group Sales Manager)</description>
    <label>Salesperson Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>