force-app/main/default/objects/Location__c/fields/SetupValueTemplate__c.field-meta.xml
<CustomField>
    <fullName>SetupValueTemplate__c</fullName>
    <description>System Field: Do Not Use. Code of selected Setup Value Template via Delphi Select\n        API</description>
    <inlineHelpText>System Field: Do Not Use. Code of selected Setup Value Template via Delphi Select\n        API</inlineHelpText>
    <label>Setup Value Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>