force-app/main/default/objects/Location__c/fields/StartDaysAfterDeparture__c.field-meta.xml
<CustomField>
    <fullName>StartDaysAfterDeparture__c</fullName>
    <description>Used to determine the start date range for the Pickup Complete job. The value will be added to the room blocks departure date and if the new date is less than the properties current date the Room Block record will not be processed.</description>
    <inlineHelpText>Used to determine the start date range for the Pickup Complete job. The value will be added to the room blocks departure date and if the new date is less than the properties current date the Room Block record will not be processed.</inlineHelpText>
    <label>Start Days After Departure</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>