force-app/main/default/objects/Location__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <label>State Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>