force-app/main/default/objects/Location__c/fields/testfalse__c.field-meta.xml
<CustomField>
    <fullName>testfalse__c</fullName>
    <description>System Field: Do Not Use.</description>
    <inlineHelpText>System Field: Do Not Use.</inlineHelpText>
    <label>testfalse</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>