force-app/main/default/objects/Location__c/fields/totalRooms__c.field-meta.xml
<CustomField>
    <fullName>totalRooms__c</fullName>
    <description>Total Guestrooms</description>
    <inlineHelpText>Total Guestrooms</inlineHelpText>
    <label>total Rooms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>