force-app/main/default/objects/Location__c/fields/TripleUpchargeRate__c.field-meta.xml
<CustomField>
    <fullName>TripleUpchargeRate__c</fullName>
    <description>Guestroom Details, use this upcharge to calculate triple occupancy rate based on single occupancy rate</description>
    <inlineHelpText>Guestroom Details, use this upcharge to calculate triple occupancy rate based on single occupancy rate</inlineHelpText>
    <label>Triple Upcharge Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>