force-app/main/default/objects/Location__c/fields/TwitterUsername__c.field-meta.xml
<CustomField>
    <fullName>TwitterUsername__c</fullName>
    <label>Twitter Username</label>
    <length>15</length>
    <type>Text</type>
</CustomField>