force-app/main/default/objects/Location__c/fields/UpdateBookingEventAverageChecks__c.field-meta.xml
<CustomField>
    <fullName>UpdateBookingEventAverageChecks__c</fullName>
    <description>Controls whether or not average checks are changed when an Event Classification is changed.</description>
    <inlineHelpText>Controls whether or not average checks are changed when an Event Classification is changed.</inlineHelpText>
    <label>Update Booking Event Average Checks</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>