force-app/main/default/objects/Location__c/fields/UseAlternateLanguage__c.field-meta.xml
<CustomField>
    <fullName>UseAlternateLanguage__c</fullName>
    <description>System Field: Do Not Use. Specifies whether alternate language fields are used for this property&apos;s records.</description>
    <inlineHelpText>System Field: Do Not Use. Specifies whether alternate language fields are used for this property&apos;s records.</inlineHelpText>
    <label>Use Alternate Language</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>